# submicro-execution-engine

./: .gitignore  CMakeLists.txt  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
benchmarks/: benchmark_main.cpp
docs/: ARCHITECTURE.md  BENCHMARK_GUIDE.md  CODE_VERIFICATION.md
examples/: busy_wait_example.cpp
include/: avellaneda_stoikov.hpp  backtesting_engine.hpp  benchmark_suite.hpp  branch_optimization.hpp  common_types.hpp  compile_time_dispatch.hpp  custom_nic_driver.hpp  event_scheduler.hpp  fast_lob.hpp  fpga_inference.hpp  hardware_bridge.hpp  hawkes_engine.hpp  institutional_logging.hpp  kernel_bypass_nic.hpp  lockfree_queue.hpp  metrics_collector.hpp  model_store.hpp  order_book_reconstructor.hpp  preserialized_orders.hpp  production_logging.hpp  risk_control.hpp  rust_ffi.hpp  shared_memory.hpp  simd_features.hpp  smart_order_router.hpp  soa_structures.hpp  solarflare_efvi.hpp  spin_loop_engine.hpp  system_determinism.hpp  vectorized_inference.hpp  websocket_server.hpp  zero_copy_decoder.hpp
scripts/: build.sh  build_all.sh  build_backtest.sh  build_benchmark.sh  push_to_github.sh  verify_data.py
src/: backtest_demo.cpp  lib.rs  main.cpp
tests/unit/: CMakeLists.txt  test_benchmark_suite.cpp
web/: DEPLOYMENT_GUIDE.md  deploy.sh  package-lock.json  package.json  tailwind.config.js
web/src/: App.css  App.tsx  index.css
web/src/components/: Architecture.tsx  Features.tsx  Footer.tsx  Hero.tsx  LiveDemo.tsx  (+2 more)
